update docs and general fixes
