# docs/swagger.json
@@ -10,7 +10,7 @@
     },
     "basePath": "/",
     "paths": {
-        "/category": {
+        "/api/v0/category": {
             "get": {
                 "description": "fetch every category available.",
                 "consumes": [
@@ -68,7 +68,7 @@
                 }
             }
         },
-        "/category/{id}": {
+        "/api/v0/category/{id}": {
             "get": {
                 "description": "fetch one category by id.",
                 "consumes": [
@@ -169,7 +169,30 @@
                 }
             }
         },
-        "/product": {
+        "/api/v0/no-db": {
+            "get": {
+                "description": "get many fake data.",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "NoDb"
+                ],
+                "summary": "Get many fake data.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v0/product": {
             "get": {
                 "description": "fetch every product available.",
                 "consumes": [
@@ -227,7 +250,7 @@
                 }
             }
         },
-        "/product/{id}": {
+        "/api/v0/product/{id}": {
             "get": {
                 "description": "fetch one product by id.",
                 "consumes": [
